You need to sign in or sign up before continuing.
ATS_M DG2: many tests - dmesg-warn/abort/dmesg-fail- BUG: sleeping function called from invalid context at kernel/locking/mutex
<7> [902.648703] xe 0000:00:02.0: [drm:intel_power_well_enable [xe]] enabling PW_2
<7> [902.648849] xe 0000:00:02.0: [drm:intel_power_well_enable [xe]] enabling PW_A
<7> [902.648994] xe 0000:00:02.0: [drm:intel_power_well_enable [xe]] enabling PW_B
<7> [902.649139] xe 0000:00:02.0: [drm:intel_power_well_enable [xe]] enabling PW_C
<7> [902.649284] xe 0000:00:02.0: [drm:intel_power_well_enable [xe]] enabling PW_D
<6> [902.666152] xe 0000:00:02.0: [drm] GT0: suspended
<3> [902.666160] BUG: sleeping function called from invalid context at kernel/locking/mutex.c:580
<3> [902.666164] in_atomic(): 1, irqs_disabled(): 1, non_block: 0, pid: 87, name: kworker/u24:1
<3> [902.666167] preempt_count: 1, expected: 0
<3> [902.666169] RCU nest depth: 0, expected: 0
<4> [902.666172] INFO: lockdep is turned off.
<4> [902.666174] irq event stamp: 795804
<4> [902.666176] hardirqs last enabled at (795803): [<ffffffff8255ae71>] _raw_spin_unlock_irqrestore+0x51/0x70
<4> [902.666182] hardirqs last disabled at (795804): [<ffffffff8254a8d5>] __schedule+0xcc5/0x1650
<4> [902.666186] softirqs last enabled at (795672): [<ffffffff8255c6f5>] __do_softirq+0x385/0x485
<4> [902.666190] softirqs last disabled at (795665): [<ffffffff8111cf75>] irq_exit_rcu+0x95/0xc0
<4> [902.666196] CPU: 0 PID: 87 Comm: kworker/u24:1 Tainted: G U W 6.4.0-xe #1
<4> [902.666199] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P DDR4 RVP, BIOS ADLPFWI1.R00.2422.A00.2110131104 10/13/2021
<4> [902.666203] Workqueue: events_unbound async_run_entry_fn
<4> [902.666208] Call Trace:
<4> [902.666211] <TASK>
<4> [902.666214] dump_stack_lvl+0x64/0xb0
<4> [902.666219] __might_resched+0x1d8/0x300
<4> [902.666224] __mutex_lock+0xc3/0x1310
<4> [902.666228] ? xe_guc_ct_disable+0x1c/0x50 [xe]
<4> [902.666326] ? intel_display_power_is_enabled+0x25/0x50 [xe]
<4> [902.666450] ? __pfx___mutex_lock+0x10/0x10
<4> [902.666453] ? xe_force_wake_put+0x1ef/0x370 [xe]
<4> [902.666593] ? rcu_is_watching+0x23/0x50